; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_get_defaults.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_get_defaults.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_source_info = type { i32 (i32*)*, i32, i32 (i32, i32*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.obs_source_info*)* @get_defaults to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_defaults(%struct.obs_source_info* %0) #0 {
  %2 = alloca %struct.obs_source_info*, align 8
  %3 = alloca i32*, align 8
  store %struct.obs_source_info* %0, %struct.obs_source_info** %2, align 8
  %4 = call i32* (...) @obs_data_create()
  store i32* %4, i32** %3, align 8
  %5 = load %struct.obs_source_info*, %struct.obs_source_info** %2, align 8
  %6 = getelementptr inbounds %struct.obs_source_info, %struct.obs_source_info* %5, i32 0, i32 2
  %7 = load i32 (i32, i32*)*, i32 (i32, i32*)** %6, align 8
  %8 = icmp ne i32 (i32, i32*)* %7, null
  br i1 %8, label %9, label %18

9:                                                ; preds = %1
  %10 = load %struct.obs_source_info*, %struct.obs_source_info** %2, align 8
  %11 = getelementptr inbounds %struct.obs_source_info, %struct.obs_source_info* %10, i32 0, i32 2
  %12 = load i32 (i32, i32*)*, i32 (i32, i32*)** %11, align 8
  %13 = load %struct.obs_source_info*, %struct.obs_source_info** %2, align 8
  %14 = getelementptr inbounds %struct.obs_source_info, %struct.obs_source_info* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 %12(i32 %15, i32* %16)
  br label %30

18:                                               ; preds = %1
  %19 = load %struct.obs_source_info*, %struct.obs_source_info** %2, align 8
  %20 = getelementptr inbounds %struct.obs_source_info, %struct.obs_source_info* %19, i32 0, i32 0
  %21 = load i32 (i32*)*, i32 (i32*)** %20, align 8
  %22 = icmp ne i32 (i32*)* %21, null
  br i1 %22, label %23, label %29

23:                                               ; preds = %18
  %24 = load %struct.obs_source_info*, %struct.obs_source_info** %2, align 8
  %25 = getelementptr inbounds %struct.obs_source_info, %struct.obs_source_info* %24, i32 0, i32 0
  %26 = load i32 (i32*)*, i32 (i32*)** %25, align 8
  %27 = load i32*, i32** %3, align 8
  %28 = call i32 %26(i32* %27)
  br label %29

29:                                               ; preds = %23, %18
  br label %30

30:                                               ; preds = %29, %9
  %31 = load i32*, i32** %3, align 8
  ret i32* %31
}

declare dso_local i32* @obs_data_create(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
